# Top-down_shooter

./: CMakeLists.txt  characters_settings.txt  readme.md  settings.txt  settings_readme.txt  todo
data/: projectile.txt
include/: engine.hpp
network_engine/: TCP_server.hpp  client_tcp.cpp  game_objects.hpp  game_state.hpp  server_tcp.cpp
network_example/: TCP_server.hpp  client_tcp.cpp  client_udp.cpp  game_state.hpp  server_tcp.cpp  server_udp.cpp
src/: engine.cpp
